# www.ncaq.net

./: .editorconfig  .editorconfig-checker.json  .envrc  .ghci  .gitattributes  .gitignore  .hlint.yaml  .lfsconfig  .prettierignore  .stylish-haskell.yaml  404.md  LICENSE  README.md  Style.hs  _typos.toml  about.html  about.md  ads.txt  base.css  base.css.map  base.scss  blog-ncaq-net.cabal  build  cabal.project  default.scss  default.ts  deploy  desktop.css  desktop.css.map  desktop.scss  entry-index.html  flake.nix  fourmolu.yaml  index.css  index.css.map  index.html  index.scss  index.ts  map-highlight.js  package-lock.json  (+19 more)
.claude/: settings.json
.claude/commands/: learn-style.md
.github/: copilot-instructions.md  dependabot.yml  git-commit-instructions.md
.github/actions/setup-nix/: action.yml
.github/workflows/: check.yml  claude-code-review.yml
entry/: 2016-10-11.md  2016-10-25.md  2016-10-29.md  2016-11-04.md  2016-11-05.md  2016-11-06.md  2016-11-07.md  2016-11-08.md  2016-11-09.md  2016-11-10.md  2016-11-11.md  2016-11-12.md  2016-11-13.md  2016-11-14.md  2016-11-15.md  2016-11-16.md  2016-11-17.md  2016-11-18.md  2016-11-19.md  2016-11-20.md  2016-11-21.md  2016-11-22.md  2016-11-23.md  2016-11-24.md  2016-11-25.md  2016-11-26.md  2016-11-27.md  2016-11-28.md  2016-12-02.md  2016-12-03.md  2016-12-05.md  2016-12-12.md  2016-12-28.md  2016-12-31.md  2017-01-01.md  2017-01-10.md  2017-01-11.md  2017-01-12.md  2017-01-13.md  2017-01-14.md  (+460 more)
file/: highlight.pack.js
site/: .editorconfig  404.md  _headers  about.md  default.scss  entry-index.html  favicon-96.avif  index.html  privacy-policy.md  robots.txt
site/entry/: 2016-10-11.md  2016-10-25.md  2016-10-29.md  2016-11-05.md  2016-11-06.md  2016-11-07.md  2016-11-08.md  2016-11-09.md  2016-11-10.md  2016-11-11.md  2016-11-12.md  2016-11-13.md  2016-11-14.md  2016-11-15.md  2016-11-16.md  2016-11-17.md  2016-11-18.md  2016-11-19.md  2016-11-20.md  2016-11-21.md  2016-11-22.md  2016-11-23.md  2016-11-24.md  2016-11-25.md  2016-11-26.md  2016-11-27.md  2016-11-28.md  2016-12-02.md  2016-12-03.md  2016-12-05.md  2016-12-12.md  2016-12-28.md  2016-12-31.md  2017-01-10.md  2017-01-11.md  2017-01-12.md  2017-01-14.md  2017-01-16.md  2017-01-29.md  2017-01-30.md  (+526 more)
site/style/: entry-of-year.css  entry-point.css  entry-preview.css  font.css  footer.css  global.css  header.css  icon.css  index.css  main.css  modus-operandi.css  modus.css  recently-entry.css  special.css  time.css  timestamp.css
site/style/modus-theme/: color-operandi.css  color-vivendi.css  element.css  pygments.css
site/templates/: default.html  entry.html
src/: BasicContext.hs  Browser.hs  Configuration.hs  EntryAndYears.hs  EntryContext.hs  Escape.hs  Feed.hs  IndexContext.hs  Integration.hs  Main.hs  Metadata.hs  Pandoc.hs  Route.hs  Run.hs  Runner.hs  Teaser.hs  Tidy.hs  Timestamp.hs  Title.hs  Vite.hs
style/: body.css  font-family.css  footer.css  global.css  header.css  icon.css  main.css  mobile.css  overflow.css  time.css
style/modus-theme/: color-operandi.css  color-vivendi.css  color.css  element.css  pygments.css
templates/: default.html  entry.html
