name:                blog-ncaq-net
version:             0.1.0.0
synopsis:            blog.ncaq.net from Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/ncaq/blog.ncaq.net#readme
license:             GPL-3
author:              ncaq
maintainer:          ncaq@ncaq.net
copyright:           © ncaq
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable blog
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base
                     , filepath
                     , hakyll
