name:                www-ncaq-net
version:             0.1.0
synopsis:            www.ncaq.net from Hakyll project template from stack
description:         Please see README.md
homepage:            https://github.com/ncaq/www.ncaq.net#readme
license:             GPL-3
author:              ncaq
maintainer:          ncaq@ncaq.net
copyright:           © ncaq
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable www-ncaq-net
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base
                     , containers
                     , filepath
                     , hakyll
                     , pandoc
                     , split
                     , text

