cabal-version: 3.12
name: www-ncaq-net
version: 1.0.0.0
synopsis: static site generator for www.ncaq.net by Hakyll
category: Web
homepage: https://github.com/ncaq/www.ncaq.net#readme
bug-reports: https://github.com/ncaq/www.ncaq.net/issues
author: ncaq
maintainer: ncaq@ncaq.net
copyright: ncaq
license: Apache-2.0
license-file: src/LICENSE
build-type: Simple

source-repository head
  type: git
  location: https://github.com/ncaq/www.ncaq.net

executable www-ncaq-net
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options:
    -Wall
    -Wcompat
    -Widentities
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wpartial-fields
    -Wredundant-constraints
    -threaded
    -rtsopts
    -with-rtsopts=-N

  default-language: GHC2021
  default-extensions:
    DataKinds
    DefaultSignatures
    FunctionalDependencies
    GADTs
    LambdaCase
    MultiWayIf
    NoImportQualifiedPost
    OverloadedStrings
    PartialTypeSignatures
    RecordWildCards
    TypeFamilies
    ViewPatterns

  other-extensions:
    TemplateHaskell

  build-depends:
    aeson,
    base,
    containers,
    convertible,
    data-default,
    directory,
    filepath,
    hakyll >=4.12.5.2,
    pandoc ^>=3.7.0.2,
    regex-tdfa,
    split,
    text,
    typed-process,

  -- cabal-gild: discover ./src --exclude=**/Main.hs
  other-modules:
    BasicContext
    Configuration
    EntryAndYears
    EntryContext
    Escape
    Feed
    IndexContext
    Integration
    Metadata
    Pandoc
    Route
    Run
    Runner
    Teaser
    Tidy
    Title
    Vite
